<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context=".SmsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<!-- back button to return recent screen-->
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_arrow"
                android:padding="14dp"/>
<!--Title of page-->
            <TextView
                android:id="@+id/Settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/profile_pic"
                    android:src="@drawable/baseline_account_circle_24"/>
<!--Display username / the current user's username-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username1"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <!--Display employee's position-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:layout_gravity="center"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:textStyle="bold" />
    <!--Edit profile button-->
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_profile"
                    android:text="@string/edit_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:paddingEnd="20dp"/>
                <LinearLayout
                    android:background="@drawable/notify_round"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:padding="15dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">
                        <ImageView
                            android:id="@+id/notifybell"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/baseline_circle_notifications_24"
                            android:contentDescription="@string/notification_bell"
                            android:padding="12dp"/>
                        <TextView
                            android:layout_marginStart="60dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/enable_sms_notification"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_toEndOf="@+id/notifybell"
                            tools:ignore="RelativeOverlap" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/enable_disable"
                            android:minHeight="48dp"
                            android:text="@string/empty"
                            tools:ignore="RelativeOverlap,UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
                        <!--switch to enable notifications -->


                    </RelativeLayout>




                </LinearLayout>
            </LinearLayout>

        </ScrollView>

</LinearLayout>